--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "ndjson": "^2.0.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "njwt": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
