--- a/fhir-data/wellknown.json
+++ b/fhir-data/wellknown.json
@@ -1,5 +1,5 @@
-{"authorization_endpoint":"https://localhost:8080/authorize",
- "token_endpoint":"https://localhost:8080/token",
+{"authorization_endpoint":"${SecurityServiceUri}/authorize",
+ "token_endpoint":"${SecurityServiceUri}/token",
  "token_endpoint_auth_methods_supported":["client_secret_basic","client_secret_post"],
  "scopes_supported":["openid","profile","fhirUser","launch","launch/patient","launch/encounter","patient/*.*","user/*.*","offline_access"],
  "response_types_supported":["code"],
